# test_task_python_csharp_intern

./: pyproject.toml  pyspark.py  shape_calculator.py  test_shape_calculator.py
