[tool.poetry]
name = "test-task-python-c#-intern"
version = "0.1.0"
description = ""
authors = ["AmaneTsu <amanetsukasa724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
sql = "^2022.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
